@@ -16,7 +16,7 @@
            destdir="${project.build}"
            nowarn="yes"
            depend="yes"
-           debug="no"
+           debug="true"
            optimize="yes"
     >
     </javac>
