@@ -1,0 +1,19 @@
+LHS empty string: false
+case 1: false
+case 2: false
+case 3: true
+case 4: true
+case 5: false
+case 6: false
+case 7: false
+case 8: false
+case 9: false
+case 10: false
+case a: true
+case b: false
+case c: true
+case d: false
+case e: true
+case f: false
+case g: false
+case h: true
